trunk/Archive2/2f/17bbf7c8cf4578/output
main.cpp:6:17: error: no member named 'get_pointer_safety' in namespace 'std'
    assert(std::get_pointer_safety() == std::pointer_safety::relaxed);
           ~~~~~^
/usr/include/assert.h:92:5: note: expanded from macro 'assert'
  ((expr)                                                               \
    ^
main.cpp:6:46: error: no member named 'pointer_safety' in namespace 'std'
    assert(std::get_pointer_safety() == std::pointer_safety::relaxed);
                                        ~~~~~^
/usr/include/assert.h:92:5: note: expanded from macro 'assert'
  ((expr)                                                               \
    ^
2 errors generated.
